fix image z-index error

--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ a:hover {
   position: absolute;
   top: 0; }
 
-img {
-  z-index: -1 !important; }
+/* img {
+  z-index: -1 !important; } */
 
 /*# sourceMappingURL=App.css.map */
